[package]
name = "pandas-pouch"
version = "0.1.0"
edition = "2021"
description = "A Distributed Caching Servie with Rust 🦀"
license = "MIT"
readme = "README.md"
authors = ["jiisanda <jiisanda@protonmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.3"
dashmap = "6.0.1"
tonic = "0.12.2"
prost = "0.13.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12.2"
