[package]
name = "pandas-pouch"
version = "0.1.0"
edition = "2021"
description = "A Distributed Caching Servie with Rust 🦀"
license = "MIT"
readme = "README.md"
authors = ["jiisanda <jiisanda@protonmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
dotenv = "0.15.0"
parking_lot = "0.12.3"
dashmap = "6.0.1"
tonic = "0.12.2"
prost = "0.13.2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.22"
env_logger = "0.11.5"
twox-hash = "1.6.3"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.2"
